--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@types/react": "^16.9.3",
     "@types/react-dom": "^16.9.1",
     "express": "^4.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^0.0.0-experimental-7f28234f8",
+    "react-dom": "^0.0.0-experimental-7f28234f8",
     "react-helmet": "^5.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.0",
