--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,7 @@
     "preserveConstEnums": true,
     "resolveJsonModule": true,
     "experimentalDecorators": true,
-    "skipLibCheck": true,
-    "paths": {
-      "@/*": ["*"]
-    }
+    "skipLibCheck": true
   },
   "include": ["./src/**/*"],
   "exclude": ["dist", "node_modules"]
