--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:server": "parcel build --no-content-hash ./src/app.tsx --out-dir ./public/",
     "dev:client": "parcel ./src/index.tsx --out-dir ./public/",
     "dev:server": "ts-node-dev --project ./tsconfig-server.json ./server/index.tsx",
-    "dev": "concurrently 'yarn dev:client' 'yarn dev:server'",
+    "dev": "concurrently 'cross-env RENDER_MODE=lagacy yarn dev:client' 'cross-env RENDER_MODE=lagacy yarn dev:server'",
+    "dev:concurrentmode": "concurrently 'cross-env RENDER_MODE=concurrent yarn dev:client' 'cross-env RENDER_MODE=concurrent yarn dev:server'",
     "type-check": "tsc --noEmit",
     "lint": "eslint ./src"
   },
@@ -25,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^1.6.1",
